--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.14",
+    "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.14",
     "@mui/styles": "^5.15.14",
     "firebase": "^10.9.0",
